--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1365,6 +1365,10 @@ select {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
+.line-through {
+  -webkit-text-decoration-line: line-through;
+          text-decoration-line: line-through;
+}
 .no-underline {
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
